--- a/Assignment for 12-11-2020/count.ipynb
+++ b/Assignment for 12-11-2020/count.ipynb
@@ -10,7 +10,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0-final"
+   "version": "3.7.6-final"
   },
   "orig_nbformat": 2,
   "kernelspec": {
@@ -23,14 +23,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Number of words:6\nNumber of vowels:6\nNumber of consonants:10\nNumber of punctuations:3\n"
+      "Number of words:6\nNumber of vowels:6\nNumber of consonants:11\nNumber of punctuations:3\n"
      ]
     }
    ],
@@ -38,7 +38,7 @@
     "from string import punctuation\n",
     "\n",
     "vowels = 'aeiou'\n",
-    "consonants = 'bcdfghjklmnpqrdtvwxyz'\n",
+    "consonants = 'bcdfghjklmnpqrstvwxyz'\n",
     "punctuations = punctuation\n",
     "\n",
     "s = input('Enter a sentence:')                     #input: Hey &^ I am Using Python.\n",
