--- a/Modules and Packages/Assignment.ipynb
+++ b/Modules and Packages/Assignment.ipynb
@@ -5,7 +5,9 @@
     "colab": {
       "name": "Assignment.ipynb",
       "provenance": [],
-      "collapsed_sections": []
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyOPTOzqwJLcwJsi9CbNVsqz",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -13,6 +15,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/PrajeetGuha/python_assignments/blob/master/Modules%20and%20Packages/Assignment.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "metadata": {
@@ -96,7 +108,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ATflTmSfULeY",
-        "outputId": "0797d247-98df-4924-e435-6734d9c47c16"
+        "outputId": "e8cef2a6-6299-448a-f8b3-983d8ab01718"
       },
       "source": [
         "import calendar as cld\r\n",
@@ -104,38 +116,40 @@
         "while 1:\r\n",
         "  try:\r\n",
         "    a = int(input('Enter a year:'))\r\n",
-        "    b = int(input('Enter month:'))\r\n",
-        "    print(f'The calendar is:\\n{cld.month(a,b)}')\r\n",
         "    \r\n",
         "    d = 0\r\n",
-        "    for day in range(1,8):\r\n",
-        "      if cld.weekday(a,b,day) == 0:\r\n",
-        "        d = day\r\n",
-        "        break\r\n",
+        "    print('The first Mondays of each month are:')\r\n",
+        "    for month in range(1,13):\r\n",
+        "      for day in range(1,8):\r\n",
+        "        if cld.weekday(a,month,day) == 0:\r\n",
+        "          d = day\r\n",
+        "          break\r\n",
         "\r\n",
-        "    print(f'The first Monday of the entered month and year is:{d}/{b}/{a}')\r\n",
+        "      print(f'{d}/{month}/{a}')\r\n",
         "    break\r\n",
         "\r\n",
         "  except:\r\n",
         "    print('Wrong input.')"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Enter a year:2000\n",
-            "Enter month:3\n",
-            "The calendar is:\n",
-            "     March 2000\n",
-            "Mo Tu We Th Fr Sa Su\n",
-            "       1  2  3  4  5\n",
-            " 6  7  8  9 10 11 12\n",
-            "13 14 15 16 17 18 19\n",
-            "20 21 22 23 24 25 26\n",
-            "27 28 29 30 31\n",
-            "\n",
-            "The first Monday of the entered month and year is:6/3/2000\n"
+            "The first Mondays of each month are:\n",
+            "3/1/2000\n",
+            "7/2/2000\n",
+            "6/3/2000\n",
+            "3/4/2000\n",
+            "1/5/2000\n",
+            "5/6/2000\n",
+            "3/7/2000\n",
+            "7/8/2000\n",
+            "4/9/2000\n",
+            "2/10/2000\n",
+            "6/11/2000\n",
+            "4/12/2000\n"
           ],
           "name": "stdout"
         }
